name:                haskell-concurrency-bugs
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     DeadlockEmpire
  other-modules:       Monitor
  build-depends:       async,
                       base,
                       extra
  default-language:    Haskell2010
